--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=tutormind
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tutormind.cbuxq3ifz84s.ap-northeast-1.rds.amazonaws.com/mydb
-spring.datasource.username=admin
-spring.datasource.password=admin133112
+#spring.datasource.url=jdbc:mysql://tutormind.cbuxq3ifz84s.ap-northeast-1.rds.amazonaws.com/mydb
+#spring.datasource.username=admin
+#spring.datasource.password=admin133112
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=hommiestore
+spring.datasource.password=hommiestore
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
