--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
 spring.application.name=tutormind
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://tutormind.cbuxq3ifz84s.ap-northeast-1.rds.amazonaws.com/mydb
-#spring.datasource.username=admin
-#spring.datasource.password=admin133112
+spring.datasource.url=jdbc:mysql://tutormind.cbuxq3ifz84s.ap-northeast-1.rds.amazonaws.com/mydb
+spring.datasource.username=admin
+spring.datasource.password=admin133112
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=hommiestore
-spring.datasource.password=hommiestore
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=hommiestore
+#spring.datasource.password=hommiestore
+
+gcp.config.file=gcp-account-file.json
+gcp.project.id=tutormind-424805
+gcp.bucket.id=tutormind
+gcp.dir.name=dev
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.session.timeout=60m
+spring.mvc.async.request-timeout=60m
+
+spring.servlet.multipart.max-file-size=2048MB
+spring.servlet.multipart.max-request-size=2048MB
