--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,31 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>prepare</id>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<copy todir="${project.build.directory}/${project.build.finalName}/" overwrite="false">
+									<fileset dir="./" includes=".platform/**"/>
+									<fileset dir="./" includes=".ebextensions/**"/>
+									<fileset dir="${project.build.directory}" includes="*.jar"/>
+								</copy>
+								<zip destfile="${project.build.directory}/${project.build.finalName}.zip"
+									 basedir="${project.build.directory}/${project.build.finalName}"/>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
